# Mastermind-with-Donald-Knuth-Five-Guess-Algorithm

./: CMakeLists.txt  README.md  main.cpp  mastermind.cpp  mastermind.h  mmTemplate.cpp  mmTemplate.h
